fixe alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -131,6 +131,7 @@ body {
     font-size: 21px;
     line-height: 34px;
     color: #8F9BB7;
+    margin-bottom: 2rem;
 }
 
 .bottom--tooltip {
